--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body{
     position: relative;
     top: 0;
     left: 0;
-    background: url("/home/manish/Downloads/projects-html and Css/shutterburg pro1/resume/images/p.jpg") top center no-repeat fixed;
+    background: url("images/p.jpg") top center no-repeat fixed;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -58,7 +58,7 @@ div{
 }
 .right{
 	height: 649px;
-	background:url("/home/manish/Downloads/projects-html and Css/shutterburg pro1/resume/images/s.jpg") no-repeat;
+	background:url("images/s.jpg") no-repeat;
 	background-size: cover;
 	padding: 0;
 	float: right;
@@ -127,7 +127,7 @@ padding-top: 30px;
 }
 .expleft{
 	height: 649px;
-	background: url("/home/manish/Downloads/projects-html and Css/shutterburg pro1/resume/images/bg.jpg") no-repeat;
+	background: url("images/bg.jpg") no-repeat;
 	background-size: cover;
 	float: left;
 	width: 673px;
