--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,7 +147,7 @@ padding-top: 30px;
 	margin:0;
 }
 .headingsty{
-	margin: 0 0 45px;
+	margin: 0 0 20px;
 	color: #333333;
 	font-size: 25px;
 	text-transform: uppercase;
@@ -164,18 +164,18 @@ padding-top: 30px;
 	padding: 0;
 }
 .projbox li{
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 	list-style-type: none;
 }
 .protitle{
 	float: left;
-    width: 90px;
-    padding: 0 20px;
+    width: 100px;
+    padding: 0 20px; 
     border-right: 1px solid #dcdcdc;
-    text-align: center;
+    text-align: left;
 }
 .prodes{
-	padding: 1px 20px;
+	/*padding: 1px 20px; */
 	padding-left: 150px;
 	text-align: left;
 }
